--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@
 
   /* Backgrounds */
   --primary-background: #faf8ef;
-  --secondary-background: #b59d87;
-  --cell-background: #cebda6;
+  --secondary-background: #c0752f;
+  --cell-background: #c08d48;
   --tile-background: #eee4da;
   --button-background: #8f7a66;
 
